ci: make the future obvious in clippy's name ... :)
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,7 +65,7 @@ jobs:
         run: cargo clippy --all-targets
 
   clippy-future:
-    name: Clippy
+    name: Clippy (Future)
     runs-on: ubuntu-latest
     strategy:
       matrix:
