--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,16 @@ repository = "https://github.com/pace-rs/pace"
 
 [workspace.dependencies]
 chrono = { version = "0.4.35", features = ["serde"] }
+chrono-tz = { version = "0.8.6", features = ["serde"] }
 clap = { version = "4", features = ["env", "wrap_help", "derive"] }
-eyre = "0.6.12"
+eyre = { version = "0.6.12" }
+getset = { version = "0.1.2" }
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
 pace_testing = { path = "crates/testing", version = "0" }
 similar-asserts = { version = "1.5.0", features = ["serde"] }
+tracing = { version = "0.1.40" }
+typed-builder = { version = "0.18.1" }
 
 [package]
 name = "pace-rs"
