feat(commands): rename review to reflect
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/tests/fixtures/activity_tracker/activities.pace.toml
+++ b/tests/fixtures/activity_tracker/activities.pace.toml
@@ -1,6 +1,6 @@
 [01HQKEJTPFPY2WPBYT8NG6W2HY]
 category = "development::pace"
-description = "Implementing Review"
+description = "Implementing Reflection"
 begin = "2024-02-26T20:34:33"
 end = "2024-02-26T20:41:59"
 duration = 446
@@ -9,7 +9,7 @@ status = "ended"
 
 [01HQKEKX9PA24T5GB17PNW0N9K]
 category = "development::pace"
-description = "Implementing Review"
+description = "Implementing Reflection"
 begin = "2024-02-26T20:35:09"
 end = "2024-02-26T20:39:13"
 duration = 244
