--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -30,6 +30,7 @@ clap = ["dep:clap"]
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 clap = { workspace = true, optional = true }
+derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign"] }
 diesel = { version = "2.1.5", features = ["sqlite", "chrono"], optional = true }
 directories = "5.0.1"
 displaydoc = "0.2.4"
