chore: use cargo-autoinherit and move up the dependencies up to workspace root
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -21,7 +21,7 @@ include = [
 [dependencies]
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
-dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
+dialoguer = { workspace = true, features = ["fuzzy-select"] }
 eyre = { workspace = true }
 getset = { workspace = true }
 pace_core = { workspace = true }
