fix: tests in pace_time
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -60,7 +60,7 @@ wildmatch = { workspace = true }
 insta = { workspace = true, features = ["toml", "redactions"] }
 pace_testing = { workspace = true }
 rstest = { workspace = true }
-similar-asserts = { workspace = true }
+similar-asserts = { workspace = true, features = ["serde"] }
 
 [lints]
 workspace = true
