--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -15,6 +15,7 @@ description = "pace-testing - Testing for the pace ecosystem"
 [dependencies]
 chrono = { workspace = true }
 pace_core = { workspace = true }
+pace_time = { workspace = true }
 rstest = { workspace = true }
 similar-asserts = { workspace = true }
 
