test: fix tests
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -57,6 +57,7 @@ ulid = { workspace = true, features = ["serde"] }
 wildmatch = { workspace = true }
 
 [dev-dependencies]
+eyre = { workspace = true }
 insta = { workspace = true, features = ["toml", "redactions"] }
 pace_testing = { workspace = true }
 rstest = { workspace = true }
