--- a/data/activities.pace.toml
+++ b/data/activities.pace.toml
@@ -1,31 +1,31 @@
 [01HPY705770QKPC8D7AA8W4FNT]
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-begin = "2024-02-10T01:58:54"
+begin = "2024-02-10T01:58:54+01:00"
 kind = "activity"
 
 [01HPY70577HNJPA7MC2NKW5JT1]
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-begin = "2024-02-10T01:58:51"
+begin = "2024-02-10T01:58:51+01:00"
 tags = ["tag1", "tag2"]
 kind = "activity"
 
 [01HPY7057730PYEPN7R3Q9TWC7]
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-begin = "2024-02-10T01:58:50"
+begin = "2024-02-10T01:58:50+01:00"
 kind = "activity"
 
 [01HPY7057761DVHMFW64P1YXQ8]
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-begin = "2024-02-10T01:23:03"
+begin = "2024-02-10T01:23:03+01:00"
 kind = "activity"
 
 [01HPY70577MQYQXTR4YFJ6NB1Y]
-end = "2024-02-04T00:00:00"
-begin = "2024-02-03T23:30:00"
+end = "2024-02-04T00:00:00+01:00"
+begin = "2024-02-03T23:30:00+01:00"
 description = "Initial design process and requirements analysis."
 duration = 1800
 kind = "intermission"
@@ -34,23 +34,23 @@ parent-id = "01HPY70577HJBZ20NQR15AR9G0"
 [01HPY70577HJBZ20NQR15AR9G0]
 category = "design::pace"
 description = "Initial design process and requirements analysis."
-end = "2024-02-04T00:15:00"
+end = "2024-02-04T00:15:00+01:00"
 duration = 6300
-begin = "2024-02-03T22:30:00"
+begin = "2024-02-03T22:30:00+01:00"
 kind = "task"
 
 [01HPY70577H375FDKT9XXAT7VB]
 category = "development::pace"
 description = "Implemented the login feature."
-end = "2024-02-04T10:30:00"
-begin = "2024-02-04T09:00:00"
+end = "2024-02-04T10:30:00+01:00"
+begin = "2024-02-04T09:00:00+01:00"
 duration = 5400
 kind = "task"
 
 [01HPY70577PMEY35A8V8FV30VC]
 category = "research::pace"
 description = "Researched secure authentication methods."
-end = "2024-02-04T12:00:00"
-begin = "2024-02-04T11:00:00"
+end = "2024-02-04T12:00:00+01:00"
+begin = "2024-02-04T11:00:00+01:00"
 duration = 3600
 kind = "task"
