--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ members = [
 authors = ["the pace-rs team"]
 categories = ["command-line-utilities"]
 edition = "2021"
+homepage = "https://pace.cli.rs"
 keywords = ["cli"]
 license = "AGPL-3.0-or-later"
 repository = "https://github.com/pace-rs/pace"
+rust-version = "1.74.1"
 
 [workspace.dependencies]
 abscissa_core = "0.7.0"
@@ -69,10 +71,11 @@ version = "0.14.1"
 authors = { workspace = true }
 categories = { workspace = true }
 edition = { workspace = true }
+homepage = { workspace = true }
 keywords = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
-rust-version = "1.74.1"
+rust-version = { workspace = true }
 description = "pace - Mindful Time Tracking: Simplify Your Focus and Boost Productivity Effortlessly."
 
 include = [
@@ -138,13 +141,7 @@ ci = ["github"]
 # The installers to generate for each app
 installers = ["shell", "powershell", "homebrew", "msi"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = [
-  "aarch64-apple-darwin",
-  "x86_64-apple-darwin",
-  "x86_64-unknown-linux-gnu",
-  "x86_64-unknown-linux-musl",
-  "x86_64-pc-windows-msvc",
-]
+targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
 # A GitHub repo to push Homebrew formulas to
