--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.3"
 authors = { workspace = true }
 categories = { workspace = true }
 edition = { workspace = true }
+homepage = { workspace = true }
 keywords = { workspace = true }
 license = { workspace = true }
-readme = { workspace = true }
 repository = { workspace = true }
 description = "pace-testing - Testing for the pace ecosystem"
 
