test: implement journey test
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ tracing = "0.1.40"
 typed-builder = "0.18.1"
 ulid = "1.1.2"
 wildmatch = "2.3.3"
+simplelog = "0.12.2"
 
 [package]
 name = "pace-rs"
