--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ serde = "1.0.197"
 serde_derive = "1.0.197"
 serde_json = "1.0.114"
 similar-asserts = "1.5.0"
+simplelog = "0.12.2"
 strum = "0.26.2"
 strum_macros = "0.26.2"
 tabled = "0.15.0"
