--- a/crates/time/Cargo.toml
+++ b/crates/time/Cargo.toml
@@ -12,14 +12,14 @@ rust-version = { workspace = true }
 description = "pace-time - a library for handling date times, ranges, and durations for pace"
 
 [features]
-default = []
+default = ["cli"]
 cli = ["clap"]
 clap = ["dep:clap"]
 
 [dependencies]
 chrono = { workspace = true, features = ["serde"] }
 chrono-tz = { workspace = true, features = ["serde"] }
-clap = { workspace = true, optional = true }
+clap = { workspace = true, optional = true, features = ["env", "wrap_help", "derive"] }
 derive_more = { workspace = true, features = ["add", "add_assign"] }
 displaydoc = { workspace = true }
 getset = { workspace = true }
@@ -27,11 +27,12 @@ humantime = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 thiserror = { workspace = true }
-tracing = { workspace = true }
+tracing = { workspace = true, features = ["log"] }
 typed-builder = { workspace = true }
 
 [dev-dependencies]
 eyre = { workspace = true }
+rstest = { workspace = true }
 
 [lints]
 workspace = true
