--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,6 +108,11 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+      
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-nextest
 
       - name: Install Rust ${{ matrix.toolchain }}
         uses: dtolnay/rust-toolchain@v1
@@ -117,7 +122,7 @@ jobs:
       - name: Run Cargo Test
         id: run_tests
         # run: cargo test --all-targets --features ${{ matrix.feature }} --workspace
-        run: cargo test --all-targets --workspace -- --ignored
+        run: cargo nextest run --all-features --workspace -- --include-ignored
         env:
           INSTA_UPDATE: new
       - name: Upload snapshots of failed tests
