--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ humantime = "2.1.0"
 insta = "1.36.1"
 insta-cmd = "0.5.0"
 itertools = "0.12.1"
+lazy_static = "1.4.0"
 libsqlite3-sys = "0.27"
 merge = "0.1.0"
 miette = "7.2.0"
@@ -59,6 +60,7 @@ strum = "0.26.2"
 strum_macros = "0.26.2"
 tabled = "0.15.0"
 tempfile = "3.10.1"
+tera = "1.19.1"
 thiserror = "1.0.58"
 toml = "0.8.12"
 tracing = "0.1.40"
