feat(templating): add first templates for html and markdown
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,7 @@ install-updater = true
 include = [
   "./config/",
   "./docs/",
+  "./templates/",
 ]
 
 # see: https://nnethercote.github.io/perf-book/build-configuration.html
