--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ itertools = "0.12.1"
 libsqlite3-sys = "0.27"
 merge = "0.1.0"
 miette = "7.2.0"
-once_cell = "1.19"
+once_cell = "1.19.0"
 open = "5.1.2"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
@@ -59,6 +59,7 @@ strum = "0.26.2"
 strum_macros = "0.26.2"
 tabled = "0.15.0"
 tempfile = "3.10.1"
+tera = "1.19.1"
 thiserror = "1.0.58"
 toml = "0.8.12"
 tracing = "0.1.40"
@@ -94,6 +95,7 @@ license = false
 eula = false
 
 [dependencies]
+abscissa_core = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
 clap = { workspace = true, features = ["env", "wrap_help", "derive"] }
 clap_complete = { workspace = true }
@@ -107,16 +109,15 @@ pace_core = { workspace = true, features = ["cli"] }
 pace_time = { workspace = true, features = ["cli"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
-
-# Better error messages for Serde
-# serde_path_to_error = "0.1.15"
-
-abscissa_core = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true, features = ["preserve_order"] }
+
 # optional: use `gimli` to capture backtraces
 # see https://github.com/rust-lang/backtrace-rs/issues/189
 # features = ["gimli-backtrace"]
+
+# Better error messages for Serde
+# serde_path_to_error = "0.1.15"
 
 [dev-dependencies]
 abscissa_core = { workspace = true, features = ["testing"] }
@@ -161,6 +162,7 @@ install-updater = true
 include = [
   "./config/",
   "./docs/",
+  "./templates/",
 ]
 
 # see: https://nnethercote.github.io/perf-book/build-configuration.html
