--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ dialoguer = "0.11.0"
 diesel = "2.1.5"
 directories = "5.0.1"
 displaydoc = "0.2.4"
+dotenvy = "0.15.7"
 enum_dispatch = "0.3.12"
 eyre = "0.6.12"
 getset = "0.1.2"
@@ -37,7 +38,7 @@ humantime = "2.1.0"
 insta = "1.36.1"
 insta-cmd = "0.5.0"
 itertools = "0.12.1"
-libsqlite3-sys = "0.27"
+libsqlite3-sys = "0.28.0"
 merge = "0.1.0"
 miette = "7.2.0"
 once_cell = "1.19.0"
@@ -49,6 +50,7 @@ parking_lot = "0.12.1"
 predicates = "3.1.0"
 rayon = "1.10.0"
 rstest = "0.18.2"
+rusqlite = "0.31.0"
 serde = "1.0.197"
 serde_derive = "1.0.197"
 serde_json = "1.0.114"
