factor out pace_storage

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,10 +20,8 @@ include = [
 ]
 
 [features]
-default = ["cli", "db"]
+default = ["cli"]
 cli = ["clap"]
-db = ["rusqlite"]
-rusqlite = ["dep:rusqlite", "dep:libsqlite3-sys"]
 clap = ["dep:clap"]
 
 [dependencies]
@@ -33,10 +31,8 @@ clap = { workspace = true, optional = true, features = ["env", "wrap_help", "der
 directories = { workspace = true }
 displaydoc = { workspace = true }
 dotenvy = { workspace = true }
-enum_dispatch = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
-libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }
 merge = { workspace = true }
 miette = { workspace = true, features = ["fancy"] }
 once_cell = { workspace = true }
@@ -44,7 +40,6 @@ open = { workspace = true }
 pace_time = { workspace = true, features = ["rusqlite"] }
 parking_lot = { workspace = true, features = ["deadlock_detection"] }
 rayon = { workspace = true }
-rusqlite = { workspace = true, optional = true, features = ["bundled", "chrono"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
