--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/cli",
   "crates/core",
   "crates/server",
+  "crates/storage",
   "crates/time",
 ]
 
@@ -44,6 +45,7 @@ once_cell = "1.19.0"
 open = "5.1.2"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
+pace_storage = { path = "crates/storage", version = "0" }
 pace_time = { path = "crates/time", version = "0" }
 parking_lot = "0.12.1"
 predicates = "3.1.0"
@@ -105,7 +107,8 @@ directories = { workspace = true }
 eyre = { workspace = true }
 human-panic = { workspace = true }
 pace_cli = { workspace = true }
-pace_core = { workspace = true, features = ["cli", "db"] }
+pace_core = { workspace = true, features = ["cli"] }
+pace_storage = { workspace = true, features = ["db"] }
 pace_time = { workspace = true, features = ["cli", "db"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
