--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ humantime = "2.1.0"
 insta = "1.36.1"
 insta-cmd = "0.5.0"
 itertools = "0.12.1"
-libsqlite3-sys = "0.28.0"
+libsqlite3-sys = "0.27.0"
 merge = "0.1.0"
 miette = "7.2.0"
 once_cell = "1.19.0"
@@ -51,7 +51,9 @@ parking_lot = "0.12.1"
 predicates = "3.1.0"
 rayon = "1.10.0"
 rstest = "0.18.2"
-rusqlite = "0.31.0"
+rusqlite = "0.30.0"
+sea-query = "0.30.7"
+sea-query-rusqlite = "0.5.0"
 serde = "1.0.197"
 serde_derive = "1.0.197"
 serde_json = "1.0.114"
