fix some more issues
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -40,7 +40,7 @@ pace_time = { workspace = true, features = ["db"] }
 parking_lot = { workspace = true, features = ["deadlock_detection"] }
 rayon = { workspace = true }
 rusqlite = { workspace = true, optional = true, features = ["bundled", "chrono"] }
-sea-query = { workspace = true, optional = true, no-default-features = true, features = ["derive", "attr", "with-chrono", "backend-sqlite"] }
+sea-query = { workspace = true, optional = true, default-features = false, features = ["derive", "attr", "with-chrono", "backend-sqlite"] }
 sea-query-rusqlite = { workspace = true, optional = true, features = ["with-chrono"] }
 strum = { workspace = true }
 thiserror = { workspace = true }
